[package]
name = "quantorium-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies for the engine and the browser go here
[dependencies]
perseus = { version = "=0.4.0-beta.17", features = [ "translator-lightweight" ] }
sycamore = "^0.8.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
lazy_static = "1"
fmterr = "0.1"

# Engine-only dependencies go here
[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
pulldown-cmark = "0.8"

# Browser-only dependencies go here
[target.'cfg(client)'.dependencies]
gloo-timers = { version = "0.2", features = [ "futures" ] }
web-sys = { version = "0.3", features = [ "Window" ] }
gloo-net = { version = "0.2", features = [ "http", "json" ] }
uuid = { version = "1", features = [ "v4", "js" ] }
regex = "1"
